src/css/gameboy.css
/*
 * Copyright (C) 2012-2015 InSeven Limited.
 *
 * This program is free software; you can redistribute it and/or
 * modify it under the terms of the GNU General Public License
 * as published by the Free Software Foundation; either version 2
 * of the License, or (at your option) any later version.
 *
 * This program is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 * GNU General Public License for more details.
 *
 * You should have received a copy of the GNU General Public License
 * along with this program; if not, write to the Free Software
 * Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301, USA.
 */

body
{
  padding: 0;
  margin: 0;
  -webkit-user-select: none;
  -ms-user-select: none;
  -moz-user-select: none;
  user-select: none;
  background-color: #000;
  font: 15px Helvetica, sans-serif;
  cursor: default;
}

#display
{
  position: relative;
  margin: auto;
  width: 320px;
  height: 288px;
}

.display
{
  position: absolute;
  top: 0;
  left: 0;
  width: 320px;
  height: 288px;
  background-color: #fff;
  background-size: 320px 288px;
}

#moulding
{
  position: absolute;
  top: 0;
  left: 0;
  display: -webkit-flex;
  width: 100%;
  height: 100%;
  background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0)), to(rgba(0, 0, 0, 0.16)));
}

#moulding-left
{
  -webkit-flex-grow: 1;
  height: 100%;
  background-image: -webkit-gradient(linear, left top, right top, from(rgba(255, 255, 255, 0)), to(rgba(255, 255, 255, 0.04)));
}

#moulding-center
{
  -webkit-flex-grow: 3;
  height: 100%;
}

#moulding-right
{
  -webkit-flex-grow: 1;
  height: 100%;
  background-image: -webkit-gradient(linear, right top, left top, from(rgba(255, 255, 255, 0)), to(rgba(255, 255, 255, 0.04)));
}

.element-surround
{
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  text-align: center;
}

.surround
{
  background-color: #222222;
  border: 1px solid #000;
  border-bottom: 1.5px solid #000;
  margin: 0 auto;
  width: 100%;
  height: 338px;
  box-shadow: 0 2px 2px rgba(255, 255, 255, 0.08), inset 0 -2px 3px rgba(255, 255, 255, 0.03);
  border-radius: 12px;
}

#LCD
{
  image-rendering: -webkit-optimize-contrast;
}

#LCD-dropshadow
{
  position: absolute;
  top: 0;
  left: 0;
  width: 320px;
  height: 288px;
  box-shadow: 0 0.5px 0.5px #ffffff, inset 0px 3px 10px #222;
}

#STATUS
{
  display: none;
}

.button
{
  width: 58px;
  height: 58px;
  cursor: pointer;
  border-radius: 31px;
  background-color: #4a4a4a;
  display: block;
  background-color: #f7f7f7;
  background-image: -webkit-linear-gradient(top, #262626, #000000);
  color: #000000;
  text-shadow: #313131 0px 1px;
  position: relative;
  text-align: center;
  font-size: 34px;
  box-shadow: 0 3px 7px #1b1b1b, inset 0 2px 3px #676767;
  border: 2px solid black;
  border-top: 1px solid black;
}

.button.pressed
{
  box-shadow: 0 1px 4px rgba(27, 27, 27, 0.72), inset 0 2px 3px rgba(103, 103, 103, 0.59);
}

.button-option-group
{
  width: 60px;
}

.left
{
  position: absolute;
  left: 0;
}

.right
{
  position: absolute;
  right: 0;
}

.top
{
  position: absolute;
  top: 0;
}

.bottom
{
  position: absolute;
  bottom: 0;
}

.button-option
{
  margin: 0 auto;
  width: 40px;
  height: 16px;
  background: black;
  border-radius: 45%;
  box-shadow: 0 -1px 3px #1b1b1b, inset 0 4px 8px rgba(103, 103, 103, 0.51);
  border: 2px solid black;
  border-top: 1px solid black;
}

.button-option.pressed
{
  box-shadow: 0 -1px 3px #1b1b1b, inset 0 4px 8px rgba(103, 103, 103, 0.39);
}

.button-label
{
  opacity: 0.3;
  text-shadow: 0 -1px #777;
  font-size: 14px;
  margin-top: 8px;
  text-transform: uppercase;
  margin: 4px auto;
  text-align: center;
}

#group-buttons
{
  position: relative;
  height: 115px;
  width: 142px;
  background-size: 132px 115px;
  margin: auto;
}

#group-options
{
  position: relative;
  width: 140px;
  height: 50px;
  margin: auto;
}

#control-a
{
  position: absolute;
  top: 5px;
  right: 3px;
}

#control-b
{
  position: absolute;
  bottom: 9px;
  left: 3px;
}

.control-text
{
  position: absolute;
  bottom: 6px;
  left: 14px;
}

.button.pressed .control-text
{
  bottom: 8px;
}

#control-dpad
{
  width: 128px;
  height: 128px;
  background-size: 128px 128px;
  margin: auto;
}

.navigation-button
{
  width: 50%;
  height: 44px;
  line-height: 44px;
  cursor: pointer;
  font-size: 16px;
  color: #d9d9d9;
  text-shadow: 0 1px 0 #4a4a4a;
  opacity: 0.6;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

.button-account
{
  position: absolute;
  top: 0;
  left: 0;
  text-align: left;
  padding-left: 10px;
}

.button-done
{
  position: absolute;
  top: 0;
  right: 0;
  text-align: right;
  padding-right: 34px;
}

.button-done:after, .button-done:before {
  content: "";
  width: 16px;
  height: 3px;
  background-color: #d9d9d9;
  position: absolute;
  right: 8px;
  top: 0;
}

.button-done:after {
    -webkit-transform:rotate(45deg);
    top: 15.75px;
}

.button-done:before {
    -webkit-transform:rotate(-45deg);
    top: 25.25px;
}

.button-done.pressed
{
}

#debug
{
  height: 20px;
  width: 100px;
  position: absolute;
  top: 0;
  left: 0;
  background-color: black;
  color: white;
  opacity: 0.7;
  padding: 20px 0;
  text-align: center;
  width: 568px;
}
  
#screen-console
{
  transition: left 0.3s ease-in-out;
  width: 100%;
  height: 100%;
  top: 0;
  left: 0;
  background-image: url(images/noise.png);
  border-radius: 12px;
}

.grape 
{
  background-color: #27358B;
}

.cherry
{
  background-color: #D81E57;
}

.teal
{
  background-color: #007FA0;
}

.lime
{
  background-color: #A0D02E;
}

.yellow
{
  background-color: #FECF41;
}

#list-games
{
  position: absolute;
  margin: 0;
  padding: 0;
  overflow: hidden;
  width: 100%;
  height: 100%;
}
/* ... */

